# BZ-arguments

./: .gitignore  CMakeLists.txt  GreenFunction.cpp  GreenFunction.h  Green_file.h5  Index.cpp  Index.h  Makefile  README.md  makefile  output.inc  plot_BZ.py  vertex.cpp  vertex.h  victory.cpp
TESTS/: CMakeCache.txt  CMakeLists.txt  Makefile  greentest.cpp  test_BZarguments  test_Index.cpp  test_IndexIBZ.cpp  test_victory
build-TESTS-Desktop-Default/: CMakeCache.txt  Makefile  test_BZarguments.cbp
